app update module added and error fixed

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+<!--    <meta http-equiv="refresh" />-->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,6 +25,25 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <meta name="Description"
+          content="Established in 2017, Sliet Alumni Association creates and maintains a lifelong connection between the institute and its alumni. In collaboration with an extremely dedicated volunteer board of directors, the Alumni association works to connect alumni, support students and build an unforgettable experience through a diversity of events, programming and services." />
+
+    <meta name="keyword" content="SLIET, sliet, Alumni, Association, Alumni Association, longowal, punjab, SLIET Alumni Association, Student Alumni Chapter, Alumni Meet, SLIET University, SLIET College SLIET Punjab" />
+
+
+    <link rel="dns-prefetch" href="//maps.google.com" />
+    <link rel="dns-prefetch" href="//use.fontawesome.com" />
+    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="//fonts.gstatic.com" />
+    <link rel="dns-prefetch" href="//www.youtube.com" />
+
+    <link rel="canonical" href="https://slietalumni.com" />
+    <link rel="shortlink" href="//slietalumni.com" />
+
+
+
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
