--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,15 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div style="height: calc(100vh - 16px); display: flex">
+        <div style="width: 300px; margin: auto; text-align: center">
+          <img src="./SAA-logo-color.png" alt=""><br>
+          <img src="./loading.gif" alt="" style="width: 150px; margin-top: -45px">
+          <h3 style="margin-top: -8px">Loading . . .</h3>
+        </div>
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
