gallery module added and some module updated

--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-<!--    <meta http-equiv="refresh" />-->
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+<head>
+    <meta charset="utf-8"/>
+    <!--    <meta http-equiv="refresh" />-->
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="cache-control" content="no-cache"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#000000"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,48 +27,52 @@
     -->
 
     <meta name="Description"
-          content="Established in 2017, Sliet Alumni Association creates and maintains a lifelong connection between the institute and its alumni. In collaboration with an extremely dedicated volunteer board of directors, the Alumni association works to connect alumni, support students and build an unforgettable experience through a diversity of events, programming and services." />
+          content="Established in 2017, Sliet Alumni Association creates and maintains a lifelong connection between the institute and its alumni. In collaboration with an extremely dedicated volunteer board of directors, the Alumni association works to connect alumni, support students and build an unforgettable experience through a diversity of events, programming and services."/>
 
-    <meta name="keyword" content="SLIET, sliet, Alumni, Association, Alumni Association, longowal, punjab, SLIET Alumni Association, Student Alumni Chapter, Alumni Meet, SLIET University, SLIET College SLIET Punjab" />
-
-
-    <link rel="dns-prefetch" href="//maps.google.com" />
-    <link rel="dns-prefetch" href="//use.fontawesome.com" />
-    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
-    <link rel="dns-prefetch" href="//fonts.gstatic.com" />
-    <link rel="dns-prefetch" href="//www.youtube.com" />
-
-    <link rel="canonical" href="https://slietalumni.com" />
-    <link rel="shortlink" href="//slietalumni.com" />
+    <meta name="keyword"
+          content="SLIET, sliet, Alumni, Association, Alumni Association, longowal, punjab, SLIET Alumni Association, Student Alumni Chapter, Alumni Meet, SLIET University, SLIET College SLIET Punjab"/>
 
 
+    <link rel="dns-prefetch" href="//maps.google.com"/>
+    <link rel="dns-prefetch" href="//use.fontawesome.com"/>
+    <link rel="dns-prefetch" href="//fonts.googleapis.com"/>
+    <link rel="dns-prefetch" href="//fonts.gstatic.com"/>
+    <link rel="dns-prefetch" href="//www.youtube.com"/>
+
+    <link rel="canonical" href="https://slietalumni.com"/>
+    <link rel="shortlink" href="//slietalumni.com"/>
 
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 
     <title>SLIET Alumni Association</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-      <div style="height: calc(100vh - 16px); display: flex">
+</head>
+<body>
+<noscript>
+    Established in 2017, Sliet Alumni Association creates and maintains a lifelong connection between the
+    institute and its alumni. In collaboration with an extremely dedicated volunteer board of directors, the Alumni
+    association works to connect alumni, support students and build an unforgettable experience through a diversity of
+    events, programming and services.
+</noscript>
+<div id="root">
+    <div style="height: calc(100vh - 16px); display: flex">
         <div style="width: 300px; margin: auto; text-align: center">
-          <img src="./SAA-logo-color.png" alt=""><br>
-          <img src="./loading.gif" alt="" style="width: 150px; margin-top: -45px">
-          <h3 style="margin-top: -8px">Loading . . .</h3>
+            <img alt="SLIET Alumni Association" src="/SAA-logo-color.png"><br>
+            <img alt="loading ..." src="/loading.gif" style="width: 150px; margin-top: -45px">
+            <h3 style="margin-top: -8px">Loading . . .</h3>
         </div>
-      </div>
     </div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+</div>
+<!--
+  This HTML file is a template.
+  If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  You can add webfonts, meta tags, or analytics to this file.
+  The build step will place the bundled scripts into the <body> tag.
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  To begin the development, run `npm start` or `yarn start`.
+  To create a production bundle, use `npm run build` or `yarn build`.
+-->
+</body>
 </html>
