--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
     <link rel="dns-prefetch" href="//fonts.gstatic.com"/>
     <link rel="dns-prefetch" href="//www.youtube.com"/>
 
-    <link rel="canonical" href="https://slietalumni.com"/>
-    <link rel="shortlink" href="//slietalumni.com"/>
+    <link rel="canonical" href="https://slietalumni.org"/>
+    <link rel="shortlink" href="//slietalumni.org"/>
 
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"/>
